--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "sitemap": "next-sitemap"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
