feat: restore layout header/footer, add admin stats, Neon DB integration, icons, and SEO fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,9 +26,7 @@
         ".contentlayer/generated"
       ]
     },
-    "types": [
-      "contentlayer/generated"
-    ],
+    "types": [],
     "plugins": [
       {
         "name": "next"
